# mpi_at_mipt

./: CMakeLists.txt  MyDouble.cpp  MyDouble.hpp  README.md  diff-eq.cpp  exp.cpp  harmonic.cpp  hello.cpp  round.cpp  sort.cpp  start.py  timer.cpp
